--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,22 @@
 * {
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
-/*Centering the page*/
 #page-wrapper {
     width: 80vw;
     margin: 0 auto;
 }
 
-/*Header starts*/
 header {
     padding: 1%;
-    background-color: rgb(89, 89, 240);
-    color: bisque;
+    background-color: rgb(28, 28, 102);
+    color: rgb(216, 220, 247);
+}
+
+body {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
 
 /*Header ends*/
@@ -27,7 +30,7 @@ header {
 }
 
 nav {
-    background-color: lightblue;
+    background-color: rgb(122, 131, 235);
     width: 30%;
 }
 
@@ -38,7 +41,7 @@ nav ul {
 
 nav li {
     width: 80%;
-    background-color: rgb(183, 182, 182);
+    background-color: rgb(216, 220, 247);
     padding: 1%;
     margin: 18% auto;
     text-align: center;
@@ -53,18 +56,57 @@ main {
     padding: 1% 2%;
     /*at least 100vh*/
     height: 150vh;
-    background-color: wheat;
+    background-color: rgb(216, 220, 247);
     text-align: center;
     width: 70%;
+    height: 100vh;
 }
 
-#this-one {
+#home {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
     width: 100%;
     margin: 5% 0;
+}
+
+#edu {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: left;
+    width: 100%;
+    margin: 5%, 0;
+}
+
+#exp {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    width: 100%;
+    margin: 5% 0;
+}
+
+ul {
+    list-style: square;
+    padding-left: 24px;
+    font-size: calc(10px + 0.6vw);
+    color: black;
+}
+
+li::marker {
+    color: rgb(28, 28, 102);
+    font-size: 1.1em;
+}
+
+li {
+    width: 100%;
+    padding: 2vh 2vw;
+    margin: 1.5vh 0;
+    text-align: left;
+    background: rgba(255, 255, 255, 0.55);
 }
 
 main p {
@@ -77,7 +119,7 @@ main h3 {
     text-align: center;
     margin: 2% 0;
     font-size: calc(2px + 2vw);
-    color: maroon;
+    color: rgb(60, 49, 185);
 }
 
 main img {
@@ -92,11 +134,10 @@ main img {
 */
 
 
-/*Two column container ends*/
 
 footer {
-    background-color: brown;
-    color: bisque;
+    background-color: rgb(28, 28, 102);
+    color: rgb(216, 220, 247);
     padding: 1%;
     text-align: center;
 }
@@ -110,7 +151,8 @@ footer {
 }
 
 footer a {
-    color: bisque;
+    color: rgb(216, 220, 247);
+    ;
 }
 
 @media screen and (max-width: 1000px) {
@@ -130,7 +172,6 @@ footer a {
     }
 
     nav li {
-        /*font-size: calc(3px + 3vw);*/
         width: 18%;
         padding: 1%;
         margin: 1%;
